[metadata]
name = adotypes
version = attr: adotypes.__version__
url = https://github.com/junkmd/adotypes
author = Jun Komoda
author_email = jun.k.job.finding12@gmail.com
license_file = MIT
description = ADODB Python DBAPI2.0, based on comtypes
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
install_requires =
	comtypes

[flake8]
# minimal black-compatible flake8 configuration
# see https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
max-line-length = 88
extend-ignore = E203
extend-exclude = *.pyi
